Cleanup: Delete all Processing files, dist/, run.bat, old docs. Update README for V7.